--- a/package.json
+++ b/package.json
@@ -38,5 +38,17 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.2.4.",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lamouett3/P6_Piiquante.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Lamouett3/P6_Piiquante/issues"
+  },
+  "homepage": "https://github.com/Lamouett3/P6_Piiquante#readme"
 }
