--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.1.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "mongoose-unique-validator": "^3.1.0",
